# kfields.github.com

./: README.md  _config.yml  index.html  params.json  pyproject.toml
.github/workflows/: gh-pages.yml
about/: index.html
blog/: elixir_on_jammy.html  helloworld.html  index.html  pyenv_on_ubuntu_22.html
contact/: index.html
content/: _index.md
css/: components.css
kfields_site/: settings.py
kfields_site/architect/builders/: project.py
projects/: acso.html  arconaut.html  decision-tree-workshop.html  gridful.html  gridlify.html  index.html  kfields.github.html  kfields.netlify.html  lemonwreck.html  livingclean.netlify.html  robocute.html
projects/page/2/: index.html
search/: index.html  index.json
